# ed25519_blake2b

./: .gitignore  LICENSE  README.md  mix.exs
bench/: bench.exs
config/: config.exs
lib/: ed25519_blake2b.ex
lib/ed25519_blake2b/: native.ex  snippets
native/ed25519blake2b/: Cargo.toml  README.md
native/ed25519blake2b/src/: lib.rs
test/: ed25519_blake2b_test.exs
