[package]
name = "ed25519blake2b"
version = "0.1.0"
authors = []

[lib]
name = "ed25519blake2b"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
rustler = "0.20.0"
rustler_codegen = "0.20.0"
lazy_static = "1.0"
ed25519-dalek = { git="https://github.com/orhanhenrik/ed25519-dalek-blake2b", rev="089cc69eff438aa0f864a25b0c3140f098a8e60a" }
blake2 = "0.8"